tests/neg-macros/i8216/Test_2.scala
object Test {
  class A(x: Int) {
    macros.test(x)
  }
  class B(y: String) {
    macros.test(y) // error
  }
}